--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:paddingStart="25dp"
         android:paddingEnd="25dp"
-        android:text="Objetivo: Compreender o funcionamento do BroadCastReceiver"
+        android:text="OBJETIVO: Compreender o funcionamento do BroadCastReceiver"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
